--- a/kernel/arch/aarch64/Makefile.arch
+++ b/kernel/arch/aarch64/Makefile.arch
@@ -1,13 +1,17 @@
 # https://gcc.gnu.org/onlinedocs/gcc-9.1.0/gcc/ARM-Options.html
+override INT_CFLAGS += -fno-pie -ffreestanding -nostdinc -nostdlib -nostartfiles -fno-exceptions -mno-outline-atomics -march=armv8-a+nofp
 override INT_CXXFLAGS += -fno-pie -ffreestanding -nostdinc -nostdlib -nostartfiles -fno-exceptions -mno-outline-atomics -march=armv8-a+nofp
 override INT_LDFLAGS  += -nostdlib
 
 ifeq ($(CONFIG_ENABLE_FTRACE), y)
+override INT_CFLAGS += -finstrument-functions
 override INT_CXXFLAGS += -finstrument-functions
 endif
 
 ifeq ($(CONFIG_ENABLE_STACKPROTECTOR), y)
+override INT_CFLAGS += -fstack-protector-strong -mstack-protector-guard=global
 override INT_CXXFLAGS += -fstack-protector-strong -mstack-protector-guard=global
 else
+override INT_CFLAGS += -fno-stack-protector
 override INT_CXXFLAGS += -fno-stack-protector
 endif
