--- a/kernel/arch/m68k/Makefile.arch
+++ b/kernel/arch/m68k/Makefile.arch
@@ -1,12 +1,16 @@
+override INT_CFLAGS += -march=68000 -fno-pie -ffreestanding -nostdinc -nostdlib -nostartfiles -fno-exceptions 
 override INT_CXXFLAGS += -march=68000 -fno-pie -ffreestanding -nostdinc -nostdlib -nostartfiles -fno-exceptions 
 override INT_LDFLAGS  += -nostdlib
 
 ifeq ($(CONFIG_ENABLE_FTRACE), y)
+override INT_CFLAGS += -finstrument-functions
 override INT_CXXFLAGS += -finstrument-functions
 endif
 
 ifeq ($(CONFIG_ENABLE_STACKPROTECTOR), y)
+override INT_CFLAGS += -fstack-protector-strong
 override INT_CXXFLAGS += -fstack-protector-strong
 else
+override INT_CFLAGS += -fno-stack-protector
 override INT_CXXFLAGS += -fno-stack-protector
 endif
