--- a/kernel/scripts/Makefile.build
+++ b/kernel/scripts/Makefile.build
@@ -1,11 +1,18 @@
+INT_CC := $(CC)
 INT_CXX := $(CXX)
 INT_LD := $(LD)
 INT_NM := $(NM)
 INT_OBJCOPY := $(OBJCOPY)
+INT_CFLAGS := $(CFLAGS)
 INT_CXXFLAGS := $(CXXFLAGS)
 INT_LDFLAGS := $(LDFLAGS)
 
-override INT_CXXFLAGS += -I arch/$(BUILD_ARCH)/include -I libcxx/include -I include -O$(CXX_OPTIM_LEVEL) -std=c++20 -Wall -Wextra -Wpedantic -Wno-unused-parameter -Werror=return-type -g
+override INT_CFLAGS += -I arch/$(BUILD_ARCH)/include -I stdlibs/libc/include -I stdlibs/libcxx/include -I include -O$(CXX_OPTIM_LEVEL) -std=c11 -Wall -Wextra -Wpedantic -Wno-unused-parameter -Werror=return-type -g
+override INT_CXXFLAGS += -I arch/$(BUILD_ARCH)/include -I stdlibs/libc/include -I stdlibs/libcxx/include -I include -O$(CXX_OPTIM_LEVEL) -std=c++20 -Wall -Wextra -Wpedantic -Wno-unused-parameter -Werror=return-type -g
+
+%.oc: %.c
+	@echo "  CC $<"
+	@$(INT_CC) $(INT_CFLAGS) -c $< -o $@
 
 %.ocpp: %.cpp
 	@echo "  CXX $<"
@@ -16,5 +23,6 @@ override INT_CXXFLAGS += -I arch/$(BUILD_ARCH)/include -I libcxx/include -I incl
 	@$(INT_CXX) $(INT_CXXFLAGS) -c $< -o $@
 
 ifeq ($(CONFIG_UBSAN), y)
+override INT_CFLAGS += -fsanitize=undefined -fno-strict-overflow
 override INT_CXXFLAGS += -fsanitize=undefined -fno-strict-overflow
 endif
