--- a/boot/rootfs-aarch64/boot/limine.cfg
+++ b/boot/rootfs-aarch64/boot/limine.cfg
@@ -10,4 +10,4 @@ TERM_BACKDROP=008080
     PROTOCOL=limine
     KERNEL_PATH=boot:///boot/kernel.o
 
-#    MODULE_PATH=boot:///boot/initramfs.bin
+    MODULE_PATH=boot:///boot/initramfs.bin
