--- a/kernel/scripts/Makefile.build
+++ b/kernel/scripts/Makefile.build
@@ -11,15 +11,15 @@ override INT_CFLAGS += -I arch/$(BUILD_ARCH)/include -I stdlibs/libc/include -I 
 override INT_CXXFLAGS += -I arch/$(BUILD_ARCH)/include -I stdlibs/libc/include -I stdlibs/libcxx/include -I include -O$(CXX_OPTIM_LEVEL) -std=c++20 -Wall -Wextra -Wpedantic -Wno-unused-parameter -Werror=return-type -g
 
 %.oc: %.c
-	@echo "  CC $<"
+	@echo "  CC $(INT_CC) $<"
 	@$(INT_CC) $(INT_CFLAGS) -c $< -o $@
 
 %.ocpp: %.cpp
-	@echo "  CXX $<"
+	@echo "  CXX $(INT_CXX) $<"
 	@$(INT_CXX) $(INT_CXXFLAGS) -c $< -o $@
 
 %.oS: %.S
-	@echo "  AS $<"
+	@echo "  AS $(INT_CXX) $<"
 	@$(INT_CXX) $(INT_CXXFLAGS) -c $< -o $@
 
 %.ors: %.rs
