--- a/kernel/arch/arm/Makefile.arch
+++ b/kernel/arch/arm/Makefile.arch
@@ -1,6 +1,6 @@
 # https://gcc.gnu.org/onlinedocs/gcc-9.1.0/gcc/ARM-Options.html
-override INT_CFLAGS += -fno-pie -ffreestanding -nostdinc -nostdlib -nostartfiles -fno-exceptions -mcpu=cortex-m0 -mfloat-abi=soft -march=armv6-m
-override INT_CXXFLAGS += -fno-pie -ffreestanding -nostdinc -nostdlib -nostartfiles -fno-exceptions -mcpu=cortex-m0 -mfloat-abi=soft -march=armv6-m
+override INT_CFLAGS += -fno-pie -ffreestanding -nostdinc -nostdlib -nostartfiles -fno-exceptions -mcpu=cortex-m0plus -mfloat-abi=soft -march=armv6-m
+override INT_CXXFLAGS += -fno-pie -ffreestanding -nostdinc -nostdlib -nostartfiles -fno-exceptions -mcpu=cortex-m0plus -mfloat-abi=soft -march=armv6-m
 override INT_LDFLAGS  += -nostdlib
 
 ifeq ($(CONFIG_ENABLE_FTRACE), y)
