--- a/kernel/kernel/Makefile
+++ b/kernel/kernel/Makefile
@@ -1,4 +1,6 @@
-obj-y += debug.ocpp framebuffer.ocpp kernel.ocpp psf.ocpp sched.ocpp stdio.ocpp time.ocpp kprintf.ocpp symbols.ocpp interrupts.ocpp elf.ocpp
+obj-y += kernel.ocpp sched.ocpp stdio.ocpp time.ocpp kprintf.ocpp symbols.ocpp interrupts.ocpp elf.ocpp
+
+obj-$(CONFIG_FB_SUPPORT) += framebuffer.ocpp psf.ocpp
 
 obj-$(CONFIG_ENABLE_BUILTIN_FONT) += unifont.bin.ocpp
 
