--- a/kernel/abi/Kconfig
+++ b/kernel/abi/Kconfig
@@ -1,3 +1,7 @@
-config ENABLE_LINUX_ABI
+config ENABLE_ABI_LINUX
     default y
     bool "Enable Linux ABI"
+
+config ENABLE_ABI_VIX
+    default y
+    bool "Enable vix ABI"
