fix limine header paths

--- a/kernel/arch/aarch64/Makefile
+++ b/kernel/arch/aarch64/Makefile
@@ -10,4 +10,4 @@ extratargets-y += include/vix/arch/limine.h
 
 $(objtree)/include/vix/arch/limine.h:
 	@curl https://raw.githubusercontent.com/limine-bootloader/limine/trunk/limine.h -o $@
-	@sed -i 's/#include <stdint.h>/#include <vix/types.h>\n#define NULL (void *)0/g' $@
+	@sed -i 's/#include <stdint.h>/#include <vix\/types.h>\n#define NULL (void *)0/g' $@
