--- a/kernel/arch/x86/Makefile
+++ b/kernel/arch/x86/Makefile
@@ -16,4 +16,4 @@ extratargets-$(CONFIG_ENABLE_KERNEL_64) += include/vix/arch/limine.h
 
 $(objtree)/include/vix/arch/limine.h:
 	@curl https://raw.githubusercontent.com/limine-bootloader/limine/trunk/limine.h -o $@
-	@sed -i 's/#include <stdint.h>/#include <vix/types.h>\n#define NULL (void *)0/g' $@
+	@sed -i 's/#include <stdint.h>/#include <vix\/types.h>\n#define NULL (void *)0/g' $@
