--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -128,6 +128,7 @@ jobs:
           path: ${{runner.workspace}}/vix/vix_uefi.img
 
       - name: check tests
+        continue-on-error: true
         run: |
           cd $GITHUB_WORKSPACE
           aarch64-linux-gnu-nm --format=bsd -n kernel/kernel.o | python3 tools/testparser.py log.txt >> $GITHUB_STEP_SUMMARY
