--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -3,6 +3,13 @@ on: [push, pull_request]
 jobs:
   build-test-nix:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        stuff:
+          - MAKE_ARCH: x86
+            CROSS_COMPILE: i686-elf-
+            qemucmd: qemu-system-x86_64 -cdrom vix.iso -nographic
+            flake: IA-32
     steps:
       - uses: actions/checkout@v4
         with:
@@ -16,24 +23,24 @@ jobs:
           restore-prefixes-first-match: nix-${{ runner.os }}-
           purge-prefixes: cache-${{ runner.os }}
       - name: Build development environment
-        run: nix develop .#IA-32 --print-build-logs --command bash -c "ls -lah"
+        run: nix develop .#${{ matrix.stuff.flake }} --print-build-logs --command bash -c "ls -lah"
       - name: Compile
         run: |
-          nix develop .#IA-32 --command bash -c 'make alldefconfig MAKE_ARCH=x86'
-          nix develop .#IA-32 --command bash -c 'make tests MAKE_ARCH=x86'
-          nix develop .#IA-32 --command bash -c 'make MAKE_ARCH=x86 CROSS_COMPILE=i686-elf-'
-          nix develop .#IA-32 --command bash -c 'make bootimg-x86-32 MAKE_ARCH=x86'
+          nix develop .#${{ matrix.stuff.flake }} --command bash -c 'make alldefconfig MAKE_ARCH=${{ matrix.stuff.MAKE_ARCH }}'
+          nix develop .#${{ matrix.stuff.flake }} --command bash -c 'make tests MAKE_ARCH=${{ matrix.stuff.MAKE_ARCH }}'
+          nix develop .#${{ matrix.stuff.flake }} --command bash -c 'make MAKE_ARCH=${{ matrix.stuff.MAKE_ARCH }} CROSS_COMPILE=${{ matrix.stuff.CROSS_COMPILE }}'
+          nix develop .#${{ matrix.stuff.flake }} --command bash -c 'make bootimg-x86-32 MAKE_ARCH=${{ matrix.stuff.MAKE_ARCH }}'
       - name: Run
-        run: nix develop .#IA-32 --command bash -c 'timeout 30 qemu-system-x86_64 -cdrom vix.iso -nographic | ansifilter | tee log.txt || true'
-      - name: upload files
-        uses: actions/upload-artifact@v4
-        with:
-          name: ci-run-x86_32
-          path: ${{runner.workspace}}/vix/vix.iso
+        run: nix develop .#${{ matrix.stuff.flake }} --command bash -c 'timeout 30 ${{ matrix.stuff.qemucmd }} | ansifilter | tee log.txt || true'
+      #- name: upload files
+      #  uses: actions/upload-artifact@v4
+      #  with:
+      #    name: ci-run-x86_32
+      #    path: ${{runner.workspace}}/vix/vix.iso
       - name: Check Tests
         run: |
-          nix develop .#IA-32 --command bash -c 'nm --format=bsd -n kernel/kernel.o | python3 tools/testparser.py log.txt >> $GITHUB_STEP_SUMMARY'
-          nix develop .#IA-32 --command bash -c 'nm --format=bsd -n kernel/kernel.o | python3 tools/testparser.py log.txt -f'
+          nix develop .#${{ matrix.stuff.flake }} --command bash -c 'nm --format=bsd -n kernel/kernel.o | python3 tools/testparser.py log.txt >> $GITHUB_STEP_SUMMARY'
+          nix develop .#${{ matrix.stuff.flake }} --command bash -c 'nm --format=bsd -n kernel/kernel.o | python3 tools/testparser.py log.txt -f'
 
   build-x86_32:
     runs-on: ubuntu-latest
