aarch64 nix stuff

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,12 +12,21 @@ jobs:
             step_bootimg: make bootimg-x86-32 MAKE_ARCH=x86
             nm: i686-elf-nm
             runcmd: qemu-system-x86_64 -cdrom vix.iso -nographic
+            ignore_test_failure: false
           - flake: x86-64
             step_config: make alldefconfig MAKE_ARCH=x86 && make tests MAKE_ARCH=x86 && sed -i "s/CONFIG_ENABLE_KERNEL_32=y/# CONFIG_ENABLE_KERNEL_32=y\nCONFIG_ENABLE_KERNEL_64=y/g" kernel/.config
             step_build: make MAKE_ARCH=x86 CROSS_COMPILE=x86_64-elf-
             step_bootimg: make bootimg-x86-64 MAKE_ARCH=x86
             nm: x86_64-elf-nm
             runcmd: qemu-system-x86_64 -nographic -serial mon:stdio -hda vix_uefi.img
+            ignore_test_failure: false
+          - flake: aarch64
+            step_config: make alldefconfig MAKE_ARCH=aarch64 && make tests MAKE_ARCH=aarch64
+            step_build: make MAKE_ARCH=aarch64 CROSS_COMPILE=aarch64-none-elf-
+            step_bootimg: make bootimg-aarch64 MAKE_ARCH=aarch64
+            nm: aarch64-none-elf-nm
+            runcmd: qemu-system-aarch64 -m 1024m -bios "$VIX_QEMU_UEFI_BIOS_PATH" -cpu cortex-a53 -smp 4 -machine virt -device ramfb -device qemu-xhci -device usb-kbd -nographic -serial mon:stdio -hda vix_uefi.img
+            ignore_test_failure: true
     steps:
       - uses: actions/checkout@v4
         with:
@@ -45,6 +54,7 @@ jobs:
       #    name: ci-run-x86_32
       #    path: ${{runner.workspace}}/vix/vix.iso
       - name: Check Tests
+        continue-on-error: ${{ matrix.stuff.ignore_test_failure }}
         run: |
           nix develop .#${{ matrix.stuff.flake }} --command bash -c '${{ matrix.stuff.nm }} --format=bsd -n kernel/kernel.o | python3 tools/testparser.py log.txt >> $GITHUB_STEP_SUMMARY'
           nix develop .#${{ matrix.stuff.flake }} --command bash -c '${{ matrix.stuff.nm }} --format=bsd -n kernel/kernel.o | python3 tools/testparser.py log.txt -f'
