https://github.com/actions/runner/issues/444 - i fucking hate github actions

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -41,22 +41,17 @@ jobs:
           purge-prefixes: cache-${{ runner.os }}
       - name: Build development environment
         run: nix develop .#${{ matrix.stuff.flake }} --print-build-logs --command bash -c "ls -lah"
-      - name: run kconfig
-        shell: nix develop .#IA-32 --command bash -e {0}
+      - name: Run Kconfig
         run: |
-          echo qwhar?? ${{ matrix.stuff.flake }}
-          ${{ matrix.stuff.step_config }}
+          nix develop .#${{ matrix.stuff.flake }} --command bash -c '${{ matrix.stuff.step_config }}'
       - name: Compile
-        shell: nix develop .#${{ matrix.stuff.flake }} --command bash -e {0}
         run: |
-          ${{ matrix.stuff.step_build }}
+          nix develop .#${{ matrix.stuff.flake }} --command bash -c '${{ matrix.stuff.step_build }}'
       - name: Build boot image
-        shell: nix develop .#${{ matrix.stuff.flake }} --command bash -e {0}
         run: |
-          ${{ matrix.stuff.step_bootimg }}
-      - name: Run
-        shell: nix develop .#${{ matrix.stuff.flake }} --command bash -e {0}
-        run: timeout 30 ${{ matrix.stuff.runcmd }} | ansifilter | tee log.txt || true
+          nix develop .#${{ matrix.stuff.flake }} --command bash -c '${{ matrix.stuff.step_bootimg }}'
+      - name: Run in emulator
+        run: nix develop .#${{ matrix.stuff.flake }} --command bash -c 'timeout 30 ${{ matrix.stuff.runcmd }} | ansifilter | tee log.txt || true'
       #- name: upload files
       #  uses: actions/upload-artifact@v4
       #  with:
@@ -64,10 +59,9 @@ jobs:
       #    path: ${{runner.workspace}}/vix/vix.iso
       - name: Check Tests
         continue-on-error: ${{ matrix.stuff.ignore_test_failure }}
-        shell: nix develop .#${{ matrix.stuff.flake }} --command bash -e {0}
         run: |
-          ${{ matrix.stuff.nm }} --format=bsd -n kernel/kernel.o | python3 tools/testparser.py log.txt >> $GITHUB_STEP_SUMMARY
-          ${{ matrix.stuff.nm }} --format=bsd -n kernel/kernel.o | python3 tools/testparser.py log.txt -f
+          nix develop .#${{ matrix.stuff.flake }} --command bash -c '${{ matrix.stuff.nm }} --format=bsd -n kernel/kernel.o | python3 tools/testparser.py log.txt >> $GITHUB_STEP_SUMMARY'
+          nix develop .#${{ matrix.stuff.flake }} --command bash -c '${{ matrix.stuff.nm }} --format=bsd -n kernel/kernel.o | python3 tools/testparser.py log.txt -f'
 
   build-x86_32:
     runs-on: ubuntu-latest
